--- a/src/components/Selected/Selected.css
+++ b/src/components/Selected/Selected.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-flow: column;
     align-items: center;
-    margin:0.5rem;
+    margin:0rem;
     padding:0.5rem;
     gap: 0.5rem;
+    max-width: 171px;
 }
