--- a/src/components/Selected/Chart/Chart.css
+++ b/src/components/Selected/Chart/Chart.css
@@ -1,6 +1,13 @@
 .chart{
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem;
 }
 .chart.active{
     display: none;
+}
+.chart h5 {
+    color: var(--primary);
 }
