--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -37,6 +37,7 @@ main {
 .selected-currencies {
     display: none;
     flex-flow: row wrap;
+    justify-content: center;
 }
 .selected-currencies.active {
     display: flex;
