--- a/src/components/Selected/Selected.css
+++ b/src/components/Selected/Selected.css
@@ -5,9 +5,20 @@
     margin: 0;
     padding: 0.5rem;
     gap: 0.5rem;
-    max-width: 171px;
 }
 .selected img {
     display: block;
     max-width: 155px;
+}
+.chartContainer {
+    width: 50vw;
+    height: 50vh;
+    max-width: 800px;
+    max-height: 480px;
+    min-width: 300px;
+    min-height: 150px;
+    display: none;
+}
+.chartContainer.active {
+    display: block;
 }
