--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -42,7 +42,7 @@ main {
 .selected-currencies.active {
     display: flex;
 }
-.dev-btn {
+.wrap-btn {
     position: absolute;
     z-index: 100;
     top: calc(5rem + 20px);
@@ -52,24 +52,24 @@ main {
     width: 30px;
 }
 
-.dev-btn .btn-bars {
+.wrap-btn .btn-bars {
     border: 1px solid white;
     width: 20px;
     transition: transform 0.5s;
     height: 0;
 }
 
-.dev-btn .btn-bar1 {
+.wrap-btn .btn-bar1 {
     transform: translateY(2px) translateX(6.5px) rotate(45deg);
 }
 
-.dev-btn .btn-bar2 {
+.wrap-btn .btn-bar2 {
     transform: translateX(-6.5px) rotate(-45deg);
 }
 
-.dev-btn.active .btn-bar1 {
+.wrap-btn.active .btn-bar1 {
     transform: translateY(2px) translateX(6.5px) rotate(-45deg);
 }
-.dev-btn.active .btn-bar2 {
+.wrap-btn.active .btn-bar2 {
     transform: translateX(-6.5px) rotate(45deg);
 }
