--- a/src/index.css
+++ b/src/index.css
@@ -1,77 +1,78 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
 :root {
-  --primary: #7289da;
-  --background: #2c2f33;
-  --background2: #23272a;
+    --primary: #7289da;
+    --background: #2c2f33;
+    --background2: #23272a;
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  font-family: 'Open Sans', sans-serif;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
+    box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #2c2f33;
-
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #2c2f33;
 }
 
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 a {
-  text-decoration: none;
-  color: #99aab5;
+    text-decoration: none;
+    color: #99aab5;
 }
 
 h1 {
-  color: white;
-  font-weight: 700;
+    color: white;
+    font-weight: 700;
 }
 
-h2, h5, p {
-  color: white;
+h2,
+h5,
+p {
+    color: white;
 }
 
 h1 {
-  font-size: 2.1rem;
-  line-height: 1.2;
+    font-size: 2.1rem;
+    line-height: 1.2;
 }
 
 h2 {
-  font-size: 1.5rem;
-  line-height: 1.2;
+    font-size: 1.5rem;
+    line-height: 1.2;
 }
 
 h5 {
-  font-size: 1.1rem;
-  line-height: 1.2;
+    font-size: 1.1rem;
+    line-height: 1.2;
 }
 
 p {
-  font-size: 1rem;
+    font-size: 1rem;
 }
 
 .btn {
-  padding: 1rem 2rem;
-  border: 1px solid var(--primary);
-  background-color: var(--primary);
-  color: white;
-  font-size: 0.9rem;
-  cursor: pointer;
-  text-align: center;
+    padding: 1rem 2rem;
+    border: 1px solid var(--primary);
+    background-color: var(--primary);
+    color: white;
+    font-size: 0.9rem;
+    cursor: pointer;
+    text-align: center;
 }
 
 .btn:hover {
-  box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.3);
 }
 
 .blue {
-  color:var(--primary);
+    color: var(--primary);
 }
